--- a/Precamp intro web programming/Lab.html
+++ b/Precamp intro web programming/Lab.html
@@ -4,54 +4,190 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <title>Lab</title>
+    <style>table, th, td {
+        border: 1px solid black;
+      }</style>
+   
 
 <body>
-    <h1> Tag "h" </h1>
-    <p>ใช้สำหรับเน้นคำที่เป็นหัวข้อเรื่อง โดยมี h1-h6 ขนาดตัวอักษรจะไล่จากใหญ่ที่สุดไปจนเล็กที่สุด ไม่มี Attribute เสริมเป็นของตัวเอง
+    <h1>1.Attribute</h1>
+    <h2> Tag "h" </h2>
+    <p>ใช้สำหรับเน้นคำที่เป็นหัวข้อเรื่อง โดยมี h1-h6 ขนาดตัวอักษรจะไล่จากใหญ่ที่สุดไปจนเล็กที่สุด ไม่มี Attribute
+        เสริมเป็นของตัวเอง
     </p> <br>
-    <h1> Tag "p"</h1>
+    <h2> Tag "p"</h2>
     <p>เป็น Tag paragraph ใช้สำหรับพิมพ์เนื้อหาลงไป ไม่มี attribute เสริมเป็นของตัวเอง</p><br>
-    <h1> Tag "div"</h1>
+    <h2> Tag "div"</h2>
     <p>ใช้พิมพ์ข้อความเหมือน Tag p แต่จะเว้นบรรทัดลงมาเป็นบรรทัดใหม่ ไม่มี attribute เสริม</p><br>
-    <h1> Tag "img" </h1>
+    <h2> Tag "img" </h2>
     <ul>
-        <li>alt ใช้อธิบายภาพที่เราแสดงไว้ในกรณีหากภาพไม่สามารถแสดงได้ เพื่อให้กลุ่มผู้มีปัญหาทางประสาทสัมผัสรับรู้รุปภาาพนั้นได้</li>
+        <li>alt ใช้อธิบายภาพที่เราแสดงไว้ในกรณีหากภาพไม่สามารถแสดงได้
+            เพื่อให้กลุ่มผู้มีปัญหาทางประสาทสัมผัสรับรู้รุปภาาพนั้นได้</li>
         <li>height ปรับขนาดความสูงของภาพ</li>
         <li>width ปรับความกว้างของภาพ</li>
         <li>src กำหนดแหล่งที่มาของภาพว่านำภาพมาจากที่ไหน</li>
     </ul>
-    <h1>Tag "a"</h1>
+    <h2>Tag "a"</h2>
     <ul>
         <li>download เริ่มการดาวน์โหลดเมื่อคลิกลิ้งก์</li>
         <li>href ระบุ URL ที่จะทำการลิ้งก์ไป</li>
         <li>target ระบุวิธีการเปิดหน้าเพจ</li>
     </ul>
-    <h1> Tag "ul"</h1>
+    <h2> Tag "ul"</h2>
     <p>ใช้ระบุข้อความแบบเป็นลิสโดยหน้าข้อความจะเป็นสัญลักษณ์ ไม่มี attribute เสริมเป็นของตัวเอง</p>
-    <h1>Tag "ol"</h1>
+    <h2>Tag "ol"</h2>
     <ul>
         <li>reversed กลับลำดับจากเริ่มต้นที่ 1 เป็นเริ่มจากตัวเลขที่มากที่สุดตามจำนวนลิส</li>
         <li>start กำหนดตัวเลขเริ่มต้นที่จะใช้เป็นลิสเช่น เริ่มที่ 50 เป็นต้นไป</li>
         <li>type ระบุประเภทของลิสที่จะใช้เช่นจากปกติจะเป็น 1 2 3 ให้เปลี่ยนเป็นตัวอักษร a b c</li>
     </ul>
-    <h1>Tag "table"</h1>
+    <h2>Tag "table"</h2>
     <p>ใช้สร้างตารางขึ้นมา ไม่มี attribute เสริมเป็นของตัวเอง</p>
-    <h1>Tag "form"</h1>
+    <h2>Tag "form"</h2>
     <ul>
         <li>accept-charset กำหนดรูปแบบcharacter encodings ที่จะส่งข้อมูล</li>
         <li>action กำหนด URL ที่จะส่งข้อมูลไป</li>
         <li>autocomplete เติมคำอัตโนมัติ</li>
     </ul>
-    <h1>Tag "button"</h1>
+    <h2>Tag "button"</h2>
     <ul>
         <li>autofocus เน้นปุ่มนั้นให้น่าสนใจ เช่นมีเส้นสีฟ้าขึ้นมาเน้นรอบปุ่มเมื่อทำการโหลดเพจขึ้นมา</li>
         <li>disabled ยกเลิกการทำงานของปุ่มๆนั้น</li>
         <li>name ตั้งชื่อให้ปุ่มนั้นๆ</li>
         <li>type เลือกTypeให้ปุ่มนั้นๆ</li>
     </ul>
-    <h2>Ref : W3School.com</h2>
+    <h3>Ref : W3School.com</h3><br>
+    <hr>
+    <h1>2.Differentiation</h1>
+    <table>
+        <tr>
+            <th>Tag</th>
+            <th>Similar</th>
+            <th>Different</th>
+        </tr>
+        <tr>
+            <td>hr&br</td>
+            <td>เว้นวรรคบรรทัดเหมือนกัน</td>
+            <td>brจะเว้นบรรทัดอย่างเดียว ส่วนhrจะมีเส้นขึ้นมากั้นระหว่างบรรทัด</td>
+        </tr>
+        <tr>
+            <td>ul&ol</td>
+            <td>สร้างลำดับเป็นlistเหมือนกัน</td>
+            <td>ulจะกำหนดหน้าlistเป็นสัญลักษณ์ ส่วนolจะกำหนดเป็นตัวเลขหรือตัวอักษร</td>
+        </tr>
+        <tr>
+            <td>select&checkbox&radio botton</td>
+            <td>สร้างตัวเลือกขึ้นมาให้เลือกเหมือนๆกัน</td>
+            <td>select จะสร้างเป็นdropboxขึ้นมาให้เลือกเพียง 1 ตัวเลือก <div>checkboxจะสร้างตัวเลือกขึ้นมามีช่องสี่เหลี่ยมด้านหน้าสามารถเลือกตัวเลือกได้ทั้งหมด</div> <div>radio button จะสร้างตัวเลือกขึ้นมาด้านหน้ามีปุ่มเป็นวงกลมเลือกตัวเลือกได้ 1 ตัวเลือก</div></td>
+        </tr>
+        <tr>
+            <td>div&span</td>
+            <td>สามารถกำหนด style ของข้อความที่อยู่ใน Tag ได้เหมือนๆกัน</td>
+            <td>divจะแยกข้อความในแต่ละtagออกขึ้นเป็นบรรทัดใหม่ spanจะรวบข้อความในtagมาอยู่บรรทัดเดียวกัน</td>
+        </tr>
+        <tr>
+            <td>script&style</td>
+            <td>ใช้แสดงผลลัพธ์ออกมาบนBrowserเหมือนๆกัน</td>
+            <td>script จะเกี่ยวกับการจัดการหรือความควบคุมข้อมูลต่างๆที่จะแสดงออกมา <div>style จะแสดงลักษณะต่างๆเช่นสีของตัวอักษร ขนาดฟอร์น</div></td>
+        </tr>
+    </table><br>
+    <hr>
+    <h1>3.Input type</h1>
+    <table>
+        <tr>
+            <th>Input type</th>
+            <th>การใช้งาน</th>
+        </tr>
+        <tr>
+            <td>button</td>
+            <td>สร้างปุ่มที่สามารถคลิกได้ขึ้นมา</td>
+        </tr>
+        <tr>
+            <td>checkbox</td>
+            <td>กำหนดตัวเลือกขึ้นมีกล่องสี่เหลี่ยมให้เลือกด้านหน้า สามารถเลือกตัวใดตัวหนึ่งหรือทั้งหมดได้</td>
+        </tr>
+        <tr>
+            <td>color</td>
+            <td>สร้างกล่องสีขึ้นมาให้เลือกสีที่ต้องการ</td>
+        </tr>
+        <tr>
+            <td>date</td>
+            <td>สร้างกล่องที่สามารถเลือกวัน-เดือน-ปีขึ้นมา</td>
+        </tr>
+        <tr>
+            <td>datetime-local</td>
+            <td>สร้างกล่องขึ้นมาคล้ายกับdateแต่จะมีส่วนของเวลาเพิ่มขึ้นมา</td>
+        </tr>
+        <tr>
+            <td>email</td>
+            <td>สร้างช่องให้กรอกemail</td>
+        </tr>
+        <tr>
+            <td>file</td>
+            <td>เรียกหน้าต่างเลือกไฟล์สำหรับuploadขึ้นมา</td>
+        </tr>
+        <tr>
+            <td>hidden</td>
+            <td>ซ่อนdataที่ทำการsubmitไปจากuser</td>
+        </tr>
+        <tr>
+            <td>image</td>
+            <td>ใช้รูปภาพแทนปุ่มsubmit</td>
+        </tr>
+        <tr>
+            <td>month</td>
+            <td>สร้างกล่องเหมือนdateแต่จะแสดงแค่เดือน-ปี</td>
+        </tr>
+        <tr>
+            <td>number</td>
+            <td>สร้างกล่องที่สามารถระบุตัวเลขขึ้นมา สามารถกำหนดช่วงตัวเลขที่จะให้ใส่ได้</td>
+        </tr>
+        <tr>
+            <td>password</td>
+            <td>สร้างกล่องใส่Password</td>
+        </tr>
+        <tr>
+            <td>radio</td>
+            <td>กำหนดตัวเลือกขึ้นมาโดยด้านหน้าจะเป็นปุ่มวงกลมให้เลือก เลือกได้เพียง 1 ตัวเลือก</td>
+        </tr>
+        <tr>
+            <td>range</td>
+            <td>สร้างปุ่มที่สามารถเลื่อนซ้ายขวาได้และสามารถระบุช่วงค่าmin-maxได้</td>
+        </tr>
+        <tr>
+            <td>reset</td>
+            <td>สร้างปุ่มที่กดแล้วจะกลับไปค่าเริ่มต้นได้</td>
+        </tr>   
+        <tr>
+            <td>search</td>
+            <td>สร้างกล่องข้อความสำหรับใส่สิ่งที่ต้องการจะค้นหา</td>
+        </tr>
+        <tr>
+            <td>submit</td>
+            <td>สร้างปุ่มsubmitสำหรับส่งข้อมูล</td>
+        </tr>
+        <tr>
+            <td>tel</td>
+            <td>สร้างกล่องสำหรับใส่เบอร์โทร สามารถกำหนดรูปแบบการใส่ได้</td>
+        </tr>
+        <tr>
+            <td>text</td>
+            <td>สร้างกล่องใส่ข้อความตัวอักษร</td>
+        </tr>
+        <tr>
+            <td>time</td>
+            <td>สร้างกล่องที่สามารถระบุเวลาได้</td>
+        </tr>
+        <tr>
+            <td>url</td>
+            <td>สร้างกล่องที่สามารถใส่ลิ้งก์ขึ้นมา</td>
+        </tr>
+        <tr>
+            <td>week</td>
+            <td>สร้างกล่องขึ้นมาลักษณะคล้ายdateแต่จะระบุวันสัปดาห์ที่เท่าไหร่ของปี</td>
+        </tr>
+    </table>
 </body>
 
 </html>
