--- a/Precamp intro web programming/Lab2 Queries .html
+++ b/Precamp intro web programming/Lab2 Queries .html
@@ -10,10 +10,22 @@
 </head>
 
 <body style="text-align: center;">
-    <p>this is how to tooltip work</p>
     <div class="tool">Hover me
         <span class="text">This is tooltip</span>
     </div>
+    <p>tooltip คือการแสดงความหมายเพิ่มเติมของสิ่งที่เรากำหนดไว้</p> <br>
+    <hr>
+    <h3>Pagination</h3>
+    <div>
+        <a href="#">&laquo;</a>
+        <a href="#">1</a>
+        <a href="#">2</a>
+        <a href="#">3</a>
+        <a href="#">&raquo;</a>
+    </div>
+    <p>เป็นการกำหนดปุ่มเลื่อนไปเพจหน้าอื่นๆที่เราสร้างไว้</p> <br>
+    <hr>
+    
 </body>
 
 </html>
