--- a/Precamp intro web programming/Lab2 Queries .html
+++ b/Precamp intro web programming/Lab2 Queries .html
@@ -25,6 +25,12 @@
     </div>
     <p>เป็นการกำหนดปุ่มเลื่อนไปเพจหน้าอื่นๆที่เราสร้างไว้</p> <br>
     <hr>
+    <h3>Navigatior bar</h3>
+    <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">News</a></li>
+        <li><a href="#">Contact</a></li>
+    </ul>
     
 </body>
 
