--- a/Precamp intro web programming/Lab2 Queries .html
+++ b/Precamp intro web programming/Lab2 Queries .html
@@ -30,8 +30,18 @@
         <li><a href="#">Home</a></li>
         <li><a href="#">News</a></li>
         <li><a href="#">Contact</a></li>
-    </ul>
-    
+    </ul><br>
+    <hr>
+    <h3>Dropdown</h3>
+    <div class="dd">
+        <button class="db"> Dropdown </button>
+        <div class="dc">
+        <a href="#">Link</a>
+        <a href="#">Link</a>
+        <a href="#">Link</a>
+        </div>
+    </div>
+
 </body>
 
 </html>
