--- a/Precamp intro web programming/Lab3 grid_flex.html
+++ b/Precamp intro web programming/Lab3 grid_flex.html
@@ -35,7 +35,28 @@
         <div class="newbox3">
             <div><span class="newtext"><img src="bg.jpg" width="200px" height="200px"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae, incidunt asperiores itaque iste dolorem nostrum numquam, omnis minima laborum earum molestias voluptatibus expedita enim praesentium iure excepturi provident quisquam blanditiis!</span></div>
         </div>
+    </div> <br>
+    <hr>
+    <h2 style="text-align: center;">https://www.amazon.com/</h2>
+    <div class="shopcontainer">
+        <div class="shopbox1">img</div>
+        <div class="shopbox">img</div>
+        <div class="shopbox">img</div>
+        <div class="shopbox">img</div>
+        <div class="shopbox">img</div>   
     </div>
+    <div class="shopcontainer2">
+        <div>img</div>
+        <div>img</div>
+        <div>img</div>
+        <div>img</div>
+        <div>img</div>
+        <div>img</div>
+        <div>img</div>
+        <div>img</div>
+    </div><br>
+    <hr>
+
 </body>
 
 </html>
