--- a/Precamp intro web programming/Lab3 grid_flex.html
+++ b/Precamp intro web programming/Lab3 grid_flex.html
@@ -33,7 +33,10 @@
         </div>
         <div class="newbox2">BLANK</div>
         <div class="newbox3">
-            <div><span class="newtext"><img src="bg.jpg" width="200px" height="200px"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repudiandae, incidunt asperiores itaque iste dolorem nostrum numquam, omnis minima laborum earum molestias voluptatibus expedita enim praesentium iure excepturi provident quisquam blanditiis!</span></div>
+            <div><span class="newtext"><img src="bg.jpg" width="200px" height="200px"> Lorem ipsum dolor sit amet
+                    consectetur, adipisicing elit. Repudiandae, incidunt asperiores itaque iste dolorem nostrum numquam,
+                    omnis minima laborum earum molestias voluptatibus expedita enim praesentium iure excepturi provident
+                    quisquam blanditiis!</span></div>
         </div>
     </div> <br>
     <hr>
@@ -43,7 +46,7 @@
         <div class="shopbox">img</div>
         <div class="shopbox">img</div>
         <div class="shopbox">img</div>
-        <div class="shopbox">img</div>   
+        <div class="shopbox">img</div>
     </div>
     <div class="shopcontainer2">
         <div>img</div>
@@ -56,6 +59,31 @@
         <div>img</div>
     </div><br>
     <hr>
+    <h2 style="text-align: center;">https://www.skilllane.com/</h2>
+    <div class="skillcontainer">
+        <div class="skillbox">img</div>
+    </div>
+
+    <div class="skillcontainer2">
+        <div><img src="bg.jpg" width="200px" height="150px">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</div>
+        <div><img src="bg.jpg" width="200px" height="150px">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</div>
+        <div><img src="bg.jpg" width="200px" height="150px">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</div>
+        <div><img src="bg.jpg" width="200px" height="150px">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</div>
+        <div><img src="bg.jpg" width="200px" height="150px">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</div>
+        <div><img src="bg.jpg" width="200px" height="150px">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</div>
+        <div><img src="bg.jpg" width="200px" height="150px">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</div>
+    </div>
+
+    <div class="skillcontainer2">
+        <div><img src="bg.jpg" width="200px" height="150px">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</div>
+        <div><img src="bg.jpg" width="200px" height="150px">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</div>
+        <div><img src="bg.jpg" width="200px" height="150px">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</div>
+        <div><img src="bg.jpg" width="200px" height="150px">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</div>
+        <div><img src="bg.jpg" width="200px" height="150px">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</div>
+        <div><img src="bg.jpg" width="200px" height="150px">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</div>
+        <div><img src="bg.jpg" width="200px" height="150px">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</div>
+    </div>
+
 
 </body>
 
