--- a/Codecamp6_main/HTML/Homework_2/booking.html
+++ b/Codecamp6_main/HTML/Homework_2/booking.html
@@ -13,20 +13,35 @@
             <div>
             <label for="airport">Flying To</label><br>
                 <select name="airport" id="airport">
-                    <option value="donmuang">Don Muang, Bangkok</option>
-                    <option value="suvarnabhumi">Suvarnabhumi, Bangkok</option>
+                    <option value="donmuang">Don Muang-Bangkok(DMK)</option>
+                    <option value="suvarnabhumi">Suvarnabhumi-Bangkok(BKK)</option>
                 </select>
             </div>
             <div>
                 <label for="airport">To</label><br>
                 <select name="airport" id="airport">
-                    
+                    <option value="phuket">Phuket(HKT)</option>
+                    <option value="chiangmai">Chiang mai(CNX)</option>
+                    <option value="haneda">Tokyo-Haneda(HND)</option>
+                    <option value="narita">Tokyo-Narita(NRT)</option>
+                    <option value="london">London(LCY)</option>
                 </select>
             </div>
-            <div>Departing</div>
-            <div>Returning</div>
+            <div>
+                <label for="depart">Departing</label><br>
+                <input type="date" id="datetogo">
+            </div>
+            <div>
+                <label for="return">Returning</label><br>
+                <input type="date" id="return">
+            </div>
+        </div> <br><br>
+        <div class="box2">
+            <div>Adult</div>
+            <div>Child</div>
+            <div>Infant</div>
+            <div>Currency</div>
         </div>
-        <div></div>
 
     </fieldset>
     
