--- a/Codecamp6_main/HTML/Homework_2/booking.html
+++ b/Codecamp6_main/HTML/Homework_2/booking.html
@@ -37,10 +37,27 @@
             </div>
         </div> <br><br>
         <div class="box2">
-            <div>Adult</div>
-            <div>Child</div>
-            <div>Infant</div>
-            <div>Currency</div>
+            <div>
+                <label for="adult">Adult</label><br>
+                <input type="number" id="adult" name="adult" min="0" max="10">
+            </div>
+            <div>
+                <label for="child">Child</label><br>
+                <input type="number" id="child" name="child" min="0" max="10">
+            </div>
+            <div>
+                <label for="infant">infant</label><br>
+                <input type="number" id="infant" name="infant" min="0" max="10">
+            </div>
+            <div>
+                <label for="currency">Currency</label><br>
+                <select name="currency" id="currency">
+                    <option value="USA">USD</option>
+                    <option value="ENG">GBP</option>
+                    <option value="TH">BTH</option>
+                    <option value="EU">EUR</option>
+                    <option value="JP">JPY</option>
+                </select></div>
         </div>
 
     </fieldset>
